--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mission 2022</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+  <section class="flexible-container">
+    <div class="header">
+      <div class="header-box">
+        <h1>Stay Focused on <br>
+          <span class="color-text"> Mission 2022</span>
+
+        </h1>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam reiciendis qui vero fugiat illo ducimus, fugit
+        earum veritatis? Suscipit temporibus officiis repellendus cumque illum deserunt dolor officia minima. Nemo,
+        accusamus.</p>
+      <div class="button" >
+        <a class="button-link" href="#">Explore Now</a>
+      </div>
+      <p class="text-shadow">Scroll down to explore more about us</p>
+    </div>
+    </div>
+    <div class="header">
+      <img src="images/person/person-2.png" alt="">
+    </div>
+  </section>
 </body>
+
 </html>
