--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam reiciendis qui vero fugiat illo ducimus, fugit
         earum veritatis? Suscipit temporibus officiis repellendus cumque illum deserunt dolor officia minima. Nemo,
         accusamus.</p>
-      <div class="button" >
+      <div class="button">
         <a class="button-link" href="#">Explore Now</a>
       </div>
       <p class="text-shadow">Scroll down to explore more about us</p>
@@ -34,6 +34,71 @@
       <img src="images/person/person-2.png" alt="">
     </div>
   </section>
+  <section class="special-container">
+    <h2>My Mission in <span class="color-text">2022</span></h2>
+    <div class="card">
+      <div id="card1" class="card-item">
+        <img src="images/illustrators/illustrator-1.png" alt="">
+        <h4>Mission</h4>
+        <p>Amet minim mollit non deserunt
+          ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim
+          velit mollit.</p>
+      </div>
+      <div id="card2" class="card-item">
+        <img src="images/illustrators/illustrator-2.png" alt="">
+        <h4>Vission</h4>
+        <p>Amet minim mollit non deserunt
+          ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim
+          velit mollit.</p>
+      </div>
+      <div id="card3" class="card-item">
+        <img src="images/illustrators/illustrator-3.png" alt="">
+        <h4>Goals</h4>
+        <p>Amet minim mollit non deserunt
+          ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim
+          velit mollit.</p>
+          
+
+      </div>
+    </div>
+  </section>
+
+  <section class="flexible-container">
+    <div class="image-box">
+     <img src="images/pictures/coding.png" alt="">
+    </div>
+    <div class="blog">
+      <h3>Develop <br>
+      Without Limits</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, reprehenderit. In aperiam neque eos animi odio sapiente, quasi ipsum a numquam, rem eius cumque, possimus laboriosam cupiditate dolorem incidunt totam harum dignissimos ab quas nulla. Corrupti magni totam debitis aut?</p>
+    <div class="button">
+      <a class="button-link" href="#">Read the Documentation</a>
+    </div>
+    </div>
+  </section>
+  <section class="flexible-container">
+    <div class="blog">
+      <h3>Know our<br>
+        Global Community
+      </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, reprehenderit. In aperiam neque eos animi odio sapiente, quasi ipsum a numquam, rem eius cumque, possimus laboriosam cupiditate dolorem incidunt totam harum dignissimos ab quas nulla. Corrupti magni totam debitis aut?</p>
+    <div class="button">
+      <a class="button-link" href="#">Read the Documentation</a>
+    </div>
+    </div>
+    <div class="image-box">
+      <img src="images/pictures/project.png" alt="">
+    </div>
+  </section>
+  <footer>
+    <h4><i>Mission <span class="color-text">2022</span></i></h4>
+    <small>Hard work, Perseverance, and Determination for 2022</small>
+    
+  </footer>
+
 </body>
 
 </html>
