--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
         </h1>
       </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam reiciendis qui vero fugiat illo ducimus, fugit
-        earum veritatis? Suscipit temporibus officiis repellendus cumque illum deserunt dolor officia minima. Nemo,
-        accusamus.</p>
+      <p>I enrolled programming hero course to become a full stack web developer.I think i can achive my goal with my hard work and patience.I am very focused and pationed to fulfill dream.I shall never neglect the time management to sucess the mission.  </p>
       <div class="button">
         <a class="button-link" href="#">Explore Now</a>
       </div>
@@ -40,27 +38,18 @@
       <div id="card1" class="card-item">
         <img src="images/illustrators/illustrator-1.png" alt="">
         <h4>Mission</h4>
-        <p>Amet minim mollit non deserunt
-          ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim
-          velit mollit.</p>
+        <p>My mission is to learn html,css and bootstrap.I also want to learn javascript and react to become a frontend developer.I want to finish all the assignment perfectly to get a chance in super charged interview club. </p>
       </div>
       <div id="card2" class="card-item">
         <img src="images/illustrators/illustrator-2.png" alt="">
         <h4>Vission</h4>
-        <p>Amet minim mollit non deserunt
-          ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim
-          velit mollit.</p>
+        <p>My vission is after become a frontend developer i want to learn backend framework such as node.js,next.js and database concept to become a full stack web developer.</p>
       </div>
       <div id="card3" class="card-item">
         <img src="images/illustrators/illustrator-3.png" alt="">
         <h4>Goals</h4>
-        <p>Amet minim mollit non deserunt
-          ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim
-          velit mollit.</p>
-          
+        <p>My goal is to explore and enjoy the technology world.I want to take experience in blockchain technology.I have a carze to become a blockchain developer.</p>
+
 
       </div>
     </div>
@@ -68,15 +57,16 @@
 
   <section class="flexible-container">
     <div class="image-box">
-     <img src="images/pictures/coding.png" alt="">
+      <img src="images/pictures/coding.png" alt="">
     </div>
     <div class="blog">
       <h3>Develop <br>
-      Without Limits</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, reprehenderit. In aperiam neque eos animi odio sapiente, quasi ipsum a numquam, rem eius cumque, possimus laboriosam cupiditate dolorem incidunt totam harum dignissimos ab quas nulla. Corrupti magni totam debitis aut?</p>
-    <div class="button">
-      <a class="button-link" href="#">Read the Documentation</a>
-    </div>
+        Without Limits</h3>
+      <p>To become a good developer one should enjoy the learning period.Because if anyone enjoy his learning period then he will learn all content without boundary.So make a mind to learn without limit.Don't stop to learning.Everyday should be productive.So rise every morning to learn and make it habit.
+      </p>
+      <div class="button">
+        <a class="button-link" href="#">Read the Documentation</a>
+      </div>
     </div>
   </section>
   <section class="flexible-container">
@@ -84,19 +74,28 @@
       <h3>Know our<br>
         Global Community
       </h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, reprehenderit. In aperiam neque eos animi odio sapiente, quasi ipsum a numquam, rem eius cumque, possimus laboriosam cupiditate dolorem incidunt totam harum dignissimos ab quas nulla. Corrupti magni totam debitis aut?</p>
-    <div class="button">
-      <a class="button-link" href="#">Read the Documentation</a>
-    </div>
+      <p>Learning and sharing is a great initiative for web developer.To enrich the knowledge one has to learn form others.If anyone face any problem in their developing then developing Community eagerly ready to solve the provlem.So every developer has to know their global Community.</p>
+      <div class="button">
+        <a class="button-link" href="#">Read the Documentation</a>
+      </div>
     </div>
     <div class="image-box">
       <img src="images/pictures/project.png" alt="">
     </div>
   </section>
+  <section class="flexible-container">
+    <div class="image-box">
+      <img id="musk-image" src="images/pictures/elon.jpg" alt="">
+    </div>
+    <div id="musk-blog" class="blog">
+      <h3>My Idol and Inspiration</h3>
+     <p class="text-shadow">Elon Musk is a CEO and entrepreneur who has founded or co-founded several companies. Musk is best known today for his ambition of putting a colony on Mars and for being the CEO of Tesla and SpaceX. Musk and his proposed projects would help propel humanity into the future. </p>
+        </div>
+        </section>
   <footer>
     <h4><i>Mission <span class="color-text">2022</span></i></h4>
     <small>Hard work, Perseverance, and Determination for 2022</small>
-    
+
   </footer>
 
 </body>
